--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <i class="fa-solid fa-heart left"></i>
                 <a href="/index.html" class="current">About us</a>
-                <a href="/pages/Happy moments.page/Happy moments.html">Happy moments</a>
+                <a href="pages/Happy moments.page/Happy moments.html">Happy moments</a>
                 <a href="pages/Gallery.page/Gallery.html">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
 
