--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="menu d-none d-md-block">
 
                 <i class="fa-solid fa-heart left"></i>
-                <a href="/index.html" class="current">About us</a>
+                <a href="index.html" class="current">About us</a>
                 <a href="pages/Happy moments.page/Happy moments.html">Happy moments</a>
                 <a href="pages/Gallery.page/Gallery.html">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
