--- a/pages/Gallery.page/Gallery.html
+++ b/pages/Gallery.page/Gallery.html
@@ -34,7 +34,7 @@
 
 
     <link rel="stylesheet" href="/grid.css">
-    <link rel="stylesheet" href="../Gallery.page/Gallery.css">
+    <link rel="stylesheet" href="pages/Gallery.page/Gallerry.css">
 </head>
 
 <body>
