--- a/pages/Gallery.page/Gallery.html
+++ b/pages/Gallery.page/Gallery.html
@@ -33,7 +33,7 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/grid.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="pages/Gallery.page/Gallerry.css">
 </head>
 
