--- a/pages/Gallery.page/Gallery.html
+++ b/pages/Gallery.page/Gallery.html
@@ -55,7 +55,7 @@
 
             <div class="menu d-none d-md-block">
                 <i class="fa-solid fa-heart left"></i>
-                <a href="index.html">About us</a>
+                <a href="../index.html">About us</a>
                 <a href="../Happy moments.page/Happy moments.html">Happy moments</a>
                 <a href="../Gallery.page/Gallery.html" class="current">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
