--- a/pages/Happy moments.page/Happy moments.html
+++ b/pages/Happy moments.page/Happy moments.html
@@ -33,7 +33,7 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/grid.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="../Happy moments.page/happy moments.css">
 </head>
 
