--- a/pages/Gallery.page/Gallery.html
+++ b/pages/Gallery.page/Gallery.html
@@ -33,8 +33,8 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="pages/Gallery.page/Gallerry.css">
+    <link rel="stylesheet" href="Anton-Maria/grid.css">
+    <link rel="stylesheet" href="Anton-Maria/pages/Gallery.page/Gallerry.css">
 </head>
 
 <body>
