--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <i class="fa-solid fa-heart left"></i>
                 <a href="index.html" class="current">About us</a>
                 <a href="Happy moments.html">Happy moments</a>
-                <a href="pages/Gallery.page/Gallery.html">Gallery</a>
+                <a href="Gallery.html">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
 
             </div>
