--- a/Happy moments.html
+++ b/Happy moments.html
@@ -33,8 +33,8 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/grid.css">
-    <link rel="stylesheet" href="../Happy moments.page/happy moments.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="happy moments.css">
 </head>
 
 <body>
