--- a/Gallery.html
+++ b/Gallery.html
@@ -33,8 +33,8 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/grid.css">
-    <link rel="stylesheet" href="../Gallery.page/Gallery.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="Gallery.css">
 </head>
 
 <body>
