--- a/Gallery.html
+++ b/Gallery.html
@@ -55,9 +55,9 @@
 
             <div class="menu d-none d-md-block">
                 <i class="fa-solid fa-heart left"></i>
-                <a href="/index.html">About us</a>
-                <a href="../Happy moments.page/Happy moments.html">Happy moments</a>
-                <a href="../Gallery.page/Gallery.html" class="current">Gallery</a>
+                <a href="index.html">About us</a>
+                <a href="Happy moments.html">Happy moments</a>
+                <a href="Gallery.html" class="current">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
             </div>
 
