--- a/Gallery.html
+++ b/Gallery.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-1.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-1.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Walk around Duboviy Gai</p>
                         </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-2.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-2.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Winter walk vibes</p>
                         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-5.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-5.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Anton`s birthday</p>
                         </div>
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-8.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-8.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Birthday our friend Gleb</p>
                         </div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-9.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-9.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Summertime walk vibes</p>
                         </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-6.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-6.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Gym vibes</p>
                         </div>
@@ -128,7 +128,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/zas-2.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/zas-2.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Zhadan and Dogs rock band concert</p>
                         </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-12.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-12.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Masha`s brother`s birthday</p>
                         </div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/zas-1.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/zas-1.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Zhadan and Dogs rock band concert</p>
                         </div>
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-11.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-11.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Birthday our friend Gleb</p>
                         </div>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/kisses.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/kisses.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Masha`s mother`s birthday</p>
                         </div>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="/images/gallery-7.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-7.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Birthday our friend Gleb</p>
                         </div>
