--- a/Happy moments.html
+++ b/Happy moments.html
@@ -89,9 +89,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -104,9 +104,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -119,9 +119,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -134,9 +134,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
             </div>
         </div>
     </div>
