add new gallery row

--- a/Gallery.html
+++ b/Gallery.html
@@ -177,6 +177,32 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card">
+                        <img src="./images/gallery-11.jpg" alt="Our photo" class="card-face-front">
+                        <div class="card-face-back">
+                            <p>Birthday our friend Gleb</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img src="./images/kisses.jpg" alt="Our photo" class="card-face-front">
+                        <div class="card-face-back">
+                            <p>Masha`s mother`s birthday</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img src="./images/gallery-7.jpg" alt="Our photo" class="card-face-front">
+                        <div class="card-face-back">
+                            <p>Birthday our friend Gleb</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
