--- a/Happy moments.html
+++ b/Happy moments.html
@@ -56,9 +56,9 @@
 
             <div class="menu d-none d-md-block">
                 <i class="fa-solid fa-heart left"></i>
-                <a href="index.html"">About us</a>
-                <a href="Happy moments.html" class="current">Happy moments</a>
-                <a href="Gallery.html">Gallery</a>
+                <a href="/index.html"">About us</a>
+                <a href=" ../Happy moments.page/Happy moments.html" class="current">Happy moments</a>
+                <a href="../Gallery.page/Gallery.html">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
             </div>
 
@@ -71,9 +71,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <h1>Сторінка щасливих моментів<i class="fa-solid fa-laptop-code"></i></h1>
+                        <h1>Сторінка щасливих моментів</h1>
                         <p>
-                            На цій сторінці ви побачите фото та опис моментів, коли ми були по справжньому щасливі :)
+                            На цій сторінці ви побачите фото та опис моментів, коли ми були по справжньому щасливі 💖
                         </p>
                     </div>
                 </div>
@@ -81,62 +81,78 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <h1>Концерт рок группи "Жадан і Собаки"<i class="fa-solid fa-laptop-code"></i></h1>
-                        <p>
-                            На цій сторінці ви побачите фото та опис моментів, коли ми були по справжньому щасливі :)
-                        </p>
+                        <h1 class="start">Концерт рок групи "Жадан і Собаки"🤘</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/zas-1.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/Turchynov.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/zas-2.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <h1>Концерт группи "МУР"<i class="fa-solid fa-laptop-code"></i></h1>
-                        <p>
-                            Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені дала моя дівчина. Цей сайт створений на честь нашого року відносин. Мета цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную відносини з моєю дівчиною💖.
-                        </p>
+                        <p>Група "Жадан і Собаки" - одна з найулюбленіших груп Маши❤️‍🔥. Дізнавшись, що ця група буде виступати у нашому місті, ми вирішили піти на їх виступ, я також зацікавився їх музикою. Концерт був неймовірним та ємоції, які ми отримали, також. Нам було весело до концерту, на ньому, а також після нього гуляти нічним городом, співаючи пісні групи</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <h1>Новий рік<i class="fa-solid fa-laptop-code"></i></h1>
-                        <p>
-                            Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені дала моя дівчина. Цей сайт створений на честь нашого року відносин. Мета цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную відносини з моєю дівчиною💖.
-                        </p>
+                        <h1 class="start">Зимові прогулянки❄️</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/me and Masha winter selfi.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/hands into snow heart.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/me around snow.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <h1> <i class="fa-solid fa-laptop-code"></i></h1>
-                        <p>
-                            Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені дала моя дівчина. Цей сайт створений на честь нашого року відносин. Мета цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную відносини з моєю дівчиною💖.
-                        </p>
+                        <p>Перша зима разом для нас з Машею була дуже весела та насичена на щасливі моменти, це і пів року наших відносин, і свято "Новий рік", а також концерт групи "ЖІС". Самі по собі зимові прогулянки були не менш насичені, було весело грати у сніжки, кидати одне одного в сніг та насолоджуватись красою вулиць, засипаних снігом.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
-                <div class="col-4"><img src="./images/multicolored-hearts-wallpaper-2x.jpg" alt=""></div>
+                <div class="col-12">
+                    <div class="text">
+                        <h1 class="start">День народження нашого друга Гліба</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4"><img src="/images/gallery-11.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/gallery-7.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/hugs.jpg" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="text">
+                        <p>День народження нашого друга Гліба - по справжньому щасливий день, коли було неймовірно весело на самому дні народженні і в моменті, коли ми iшли з дня народження. Добираючись до зупинки, ми співали пісні, фотографувалися та веселились, як тільки могли🤪</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="text">
+                        <h1 class="start">День народження мами Маши❤️‍🔥</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4"><img src="/images/me and Masha on the balcony.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/water-swimmer.jpg" alt=""></div>
+                <div class="col-4"><img src="/images/kisses.jpg" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="text">
+                        <p>День народження мами Маши❤️‍🔥 було дуже веселим, ми з Машею❤️‍🔥 чудово проводили час, співаючи пісні, танцюючи. Особливо весело нам було в басейні, де ми провели час до самого вечора, роздивляючись смішні картини під водою (фото приклад посередині) </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
