--- a/Happy moments.html
+++ b/Happy moments.html
@@ -56,9 +56,9 @@
 
             <div class="menu d-none d-md-block">
                 <i class="fa-solid fa-heart left"></i>
-                <a href="/index.html"">About us</a>
-                <a href=" ../Happy moments.page/Happy moments.html" class="current">Happy moments</a>
-                <a href="../Gallery.page/Gallery.html">Gallery</a>
+                <a href="index.html">About us</a>
+                <a href="Happy moments.html" class="current">Happy moments</a>
+                <a href="Gallery.html">Gallery</a>
                 <i class="fa-solid fa-heart right"></i>
             </div>
 
