--- a/Happy moments.html
+++ b/Happy moments.html
@@ -86,9 +86,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/zas-1.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/Turchynov.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/zas-2.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/zas-1.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/Turchynov.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/zas-2.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -105,9 +105,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/me and Masha winter selfi.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/hands into snow heart.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/me around snow.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/me and Masha winter selfi.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/hands into snow heart.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/me around snow.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -124,9 +124,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/gallery-11.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/gallery-7.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/hugs.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/gallery-11.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/gallery-7.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/hugs.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -143,9 +143,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="/images/me and Masha on the balcony.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/water-swimmer.jpg" alt=""></div>
-                <div class="col-4"><img src="/images/kisses.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/me and Masha on the balcony.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/water-swimmer.jpg" alt=""></div>
+                <div class="col-4"><img src="./images/kisses.jpg" alt=""></div>
             </div>
             <div class="row">
                 <div class="col-12">
