--- a/Happy moments.html
+++ b/Happy moments.html
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-4"><img src="./images/gallery-11.jpg" alt="our photo"></div>
                 <div class="col-4"><img src="./images/gallery-7.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/hugs.jpg" alt="our photo"></div>
+                <div class="col-4"><img src="./images/gallery-8.jpg" alt="our photo"></div>
             </div>
             <div class="row">
                 <div class="col-12">
