--- a/index.html
+++ b/index.html
@@ -51,15 +51,14 @@
 
             <select class="d-md-none">
 
-                <a href="./index.html">
-                    <option>About us</option>
-                </a>
-                <a href="./pages/Happy moments.page/">
-                    <option>Happy moments</option>
-                </a>
-                <a href="./pages/Gallery.page/">
-                    <option>Gallery</option>
-                </a>
+
+                <option>About us</option>
+
+
+                <option>Happy moments</option>
+
+
+                <option>Gallery</option>
 
             </select>
 
@@ -89,7 +88,10 @@
                     <div class="text">
                         <h1>Для чого цей сайт? <i class="fa-solid fa-laptop-code"></i></h1>
                         <p>
-                            Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені дала моя дівчина. Цей сайт створений на честь нашого року відносин. Мета цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную відносини з моєю дівчиною💖.
+                            Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені
+                            дала моя дівчина на ймення Маша❤️‍🔥. Цей сайт створений на честь нашого року відносин. Мета
+                            цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную
+                            відносини з моєю дівчиною❤️‍🔥.
                         </p>
                     </div>
 
@@ -105,16 +107,19 @@
 
                         <h1>З чого все почалося?</h1>
                         <p>
-                            Наше знайомство відбулося через спільну компанію, але дружні стосунки з'явилися пізніше, адже з появою моєї дівчини в компанії ми майже не розмовляли.
+                            Наше знайомство відбулося через спільну компанію, але дружні стосунки з'явилися пізніше,
+                            адже з появою Маши💖 в компанії ми майже не розмовляли.
                             <br>
-                            Одного дня я вирішив їй написати, проте я це завуалював під іншу причину. Ми почали все довше і довше спілкуватися, а потім і гуляти разом, і 16 липня це переросло у наші відносини.
+                            Одного дня я вирішив їй написати, проте я це завуалював під іншу причину. Ми почали все
+                            довше і довше спілкуватися, а потім і гуляти разом, і 16 липня це переросло у наші
+                            відносини.
                         </p>
 
                         <h1>Трохи про нас</h1>
                         <p>
-                            Ми живемо в Україні, місто Запоріжжя. Полюблямо проводити час разом та з нашими друзями. В
+                            Ми живемо в Україні, місто Запоріжжя. Полюблямо проводити час разом і з нашими друзями). В
                             нас досить схожі смаки в музиці, тому її ми полюбляємо слухати, а дехто з нас хоче пов'язати
-                            усе життя їй, маючи свою группу, авжеж це Марія💖. Я ж у свою чергу хочу стати
+                            усе життя їй, маючи свою группу, авжеж це Маша❤️‍🔥. Я ж у свою чергу хочу стати
                             программістом.
                             <br>Також ми полюбляємо дивитися різні фільми чи серіальчики разом. А взагалі ми дуже круті
                             та класні🤘🤘🤘</br>
@@ -138,7 +143,7 @@
 
                         <h1>Уті-путі</h1>
                         <p>
-                            Як закінчення цієї сторінки, хочу сказати декілька слів своїй дівчині.
+                            Як закінчення цієї сторінки, хочу сказати декілька слів своїй дівчині❤️‍🔥.
                             <br>Ми разом вже цілий рік, за цей рік ми подарували одне одному дуже багато щасливих та
                             радісних моментів, яких я б і не зміг перерахувати.</br>
                             Я хочу подякувати за те, що ти мене завжди підтримуешь та не даешь засумувати, я тебе дуже
