--- a/Gallery.html
+++ b/Gallery.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="./images/kisses.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/walking duboviy gay.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Masha`s mother`s birthday</p>
                         </div>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="./images/gallery-7.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/duboviy gay bench.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
                             <p>Birthday our friend Gleb</p>
                         </div>
