--- a/Gallery.html
+++ b/Gallery.html
@@ -180,9 +180,9 @@
             <div class="row">
                 <div class="col-4">
                     <div class="card">
-                        <img src="./images/gallery-11.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/gallery-4.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
-                            <p>Birthday our friend Gleb</p>
+                            <p>Anton`s birthday </p>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                     <div class="card">
                         <img src="./images/walking duboviy gay.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
-                            <p>Masha`s mother`s birthday</p>
+                            <p>Walk around Duboviy Gai</p>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                     <div class="card">
                         <img src="./images/duboviy gay bench.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
-                            <p>Birthday our friend Gleb</p>
+                            <p>Walk around Duboviy Gai</p>
                         </div>
                     </div>
                 </div>
