--- a/Gallery.html
+++ b/Gallery.html
@@ -196,9 +196,9 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="./images/duboviy gay bench.jpg" alt="Our photo" class="card-face-front">
+                        <img src="./images/tongues photo.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
-                            <p>Walk around Duboviy Gai</p>
+                            <p>Road from Duboviy Gai</p>
                         </div>
                     </div>
                 </div>
