--- a/Gallery.html
+++ b/Gallery.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1><i class="fa-solid fa-film"></i>Gallery<i class="fa-solid fa-film"></i></h1>
-                    <p>На цій сторінці ви можете побачити наші спільні з Марією фото</p>
+                    <p>На цій сторінці ви можете побачити наші спільні з Машею фото</p>
                 </div>
             </div>
             <div class="row">
