--- a/Gallery.html
+++ b/Gallery.html
@@ -32,7 +32,7 @@
         href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Jost:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&family=Roboto+Condensed:ital,wght@0,700;1,700&family=Russo+One&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" href="./images/Icons8-Ios7-Gaming-Hearts.512" type="image/png">
+    <link rel="icon" href="./images/Icons8-Ios7-Gaming-Hearts.512.png" type="image/png">
     
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="Gallery.css">
