--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="header-starter">
 
-            <h1><span>M</span>ariya & <span>A</span>nton</h1>
+            <h1><span>M</span>sha & <span>A</span>nton</h1>
             <h2>Our love story</h2>
 
         </div>
