--- a/Happy moments.html
+++ b/Happy moments.html
@@ -43,7 +43,7 @@
     <header>
 
         <div class="header-starter">
-            <h1><span>M</span>ariya & <span>A</span>nton</h1>
+            <h1><span>M</span>asha & <span>A</span>nton</h1>
             <h2>Our love story</h2>
         </div>
 
