--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love story about me and me girl</title>
+    <title>Love story about me and my girl</title>
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
