--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <h1>Для чого цей сайт? <i class="fa-solid fa-laptop-code"></i></h1>
                         <p>
                             Привіт. Мене звати Антон, і я розробник цього сайту. Натхнення на створення цього сайту мені
-                            дала моя дівчина на ймення Маша❤️‍🔥. Цей сайт створений на честь нашого року відносин. Мета
+                            дала моя дівчина на ім'я Маша❤️‍🔥. Цей сайт створений на честь нашого року відносин. Мета
                             цього сайту - зафіксувати щасливі моменти наших відносин та показати, наскільки я ціную
                             відносини з моєю дівчиною❤️‍🔥.
                         </p>
