--- a/Happy moments.html
+++ b/Happy moments.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text">
-                        <p>Група "Жадан і Собаки" - одна з найулюбленіших груп Маши❤️‍🔥. Дізнавшись, що ця група буде виступати у нашому місті, ми вирішили піти на їх виступ, я також зацікавився їх музикою. Концерт був неймовірним та ємоції, які ми отримали, також. Нам було весело до концерту, на ньому, а також після нього гуляти нічним городом, співаючи пісні групи</p>
+                        <p>Група "Жадан і Собаки" - одна з найулюбленіших груп Маши❤️‍🔥. Дізнавшись, що ця група буде виступати у нашому місті, ми вирішили піти на їх виступ, я також зацікавився їх музикою. Концерт був неймовірним та емоції, які ми отримали, також. Нам було весело до концерту, на ньому, а також після нього гуляти нічним городом, співаючи пісні групи</p>
                     </div>
                 </div>
             </div>
