--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                         <h1>Трохи про нас</h1>
                         <p>
-                            Ми живемо в Україні, місто Запоріжжя. Полюблямо проводити час разом і з нашими друзями). В
+                            Ми живемо в Україні, місто Запоріжжя. Полюбляємо проводити час разом і з нашими друзями). В
                             нас досить схожі смаки в музиці, тому її ми полюбляємо слухати, а дехто з нас хоче пов'язати
                             усе життя їй, маючи свою группу, авжеж це Маша❤️‍🔥. Я ж у свою чергу хочу стати
                             программістом.
