--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             Як закінчення цієї сторінки, хочу сказати декілька слів своїй дівчині❤️‍🔥.
                             <br>Ми разом вже цілий рік, за цей рік ми подарували одне одному дуже багато щасливих та
                             радісних моментів, яких я б і не зміг перерахувати.</br>
-                            Я хочу подякувати за те, що ти мене завжди підтримуешь та не даешь засумувати, я тебе дуже
+                            Я хочу подякувати за те, що ти мене завжди підтримуєш та не даєш засумувати, я тебе дуже
                             сильно кохаю, ти найкраща ❤️‍🔥❤️‍🔥❤️‍🔥❤️❤️❤️!!!
                         </p>
 
