--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             Ми живемо в Україні, місто Запоріжжя. Полюбляємо проводити час разом і з нашими друзями). В
                             нас досить схожі смаки в музиці, тому її ми постійно слухаємо, а дехто з нас хоче пов'язати
                             усе життя їй, маючи свою группу, авжеж це Маша❤️‍🔥. Я ж у свою чергу хочу стати
-                            программістом.
+                            програмістом.
                             <br>Також ми полюбляємо дивитися різні фільми чи серіальчики разом. А взагалі ми дуже круті
                             та класні🤘🤘🤘</br>
                         </p>
