--- a/Gallery.html
+++ b/Gallery.html
@@ -71,13 +71,13 @@
     <div class="container">
         <div class="gallery-content">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 px-20">
                     <h1><i class="fa-solid fa-film"></i>Gallery<i class="fa-solid fa-film"></i></h1>
                     <p>На цій сторінці ви можете побачити наші спільні з Машею фото</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
+            <div class="content-row">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-1.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-2.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-5.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -102,8 +102,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
+            <div class="content-row">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-8.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-9.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-6.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
+            <div class="content-row">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/zas-2.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-12.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/zas-1.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -154,8 +154,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
+            <div class="content-row">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-11.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/kisses.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-7.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -180,8 +180,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
+            <div class="content-row">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/gallery-4.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/walking duboviy gay.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card">
                         <img src="./images/tongues photo.jpg" alt="Our photo" class="card-face-front">
                         <div class="card-face-back">
