--- a/Gallery.html
+++ b/Gallery.html
@@ -49,7 +49,8 @@
         <nav>
 
             <select class="d-md-none" id="navSelect">
-
+                
+                <option>Choose a section</option>
                 <option value="index.html">About us</option>
                 <option value="Happy moments.html">Happy moments</option>
                 <option value="Gallery.html">Gallery</option>
