--- a/Gallery.html
+++ b/Gallery.html
@@ -69,7 +69,7 @@
 
     </header>
 
-    <div class="container">
+    <div class="container image-container">
         <div class="gallery-content">
             <div class="row">
                 <div class="col-12 px-20">
