--- a/Happy moments.html
+++ b/Happy moments.html
@@ -70,7 +70,7 @@
 
     </header>
 
-    <div class="container">
+    <div class="container image-container">
         <div class="hmoments-content">
             <div class="row">
                 <div class="col-12">
