--- a/Happy moments.html
+++ b/Happy moments.html
@@ -50,8 +50,7 @@
         <nav>
 
             <select class="d-md-none" id="navSelect">
-                
-                <option>Choose a section</option>
+
                 <option value="index.html">About us</option>
                 <option value="Happy moments.html">Happy moments</option>
                 <option value="Gallery.html">Gallery</option>
@@ -70,10 +69,10 @@
 
     </header>
 
-    <div class="container image-container">
+    <div class="container">
         <div class="hmoments-content">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <h1>Сторінка щасливих моментів</h1>
                         <p>
@@ -83,76 +82,76 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <h1 class="start">Концерт рок групи "Жадан і Собаки"🤘</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/zas-1.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/Turchynov.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/zas-2.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/zas-1.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/Turchynov.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/zas-2.jpg" alt="our photo"></div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <p>Група "Жадан і Собаки" - одна з найулюбленіших груп Маши❤️‍🔥. Дізнавшись, що ця група буде виступати у нашому місті, ми вирішили піти на їх виступ, я також зацікавився їх музикою. Концерт був неймовірним та емоції, які ми отримали, також. Нам було весело до концерту, на ньому, а також після нього гуляти нічним містом, співаючи пісні групи</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <h1 class="start">Зимові прогулянки❄️</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/me and Masha winter selfi.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/hands into snow heart.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/me around snow.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/me and Masha winter selfi.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/hands into snow heart.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/me around snow.jpg" alt="our photo"></div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <p>Перша зима разом для нас з Машею була дуже весела та насичена на щасливі моменти, це і пів року наших відносин, і свято "Новий рік", а також концерт групи "ЖІС". Самі по собі зимові прогулянки були не менш насичені, було весело грати у сніжки, кидати одне одного в сніг та насолоджуватись красою вулиць, засипаних снігом.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <h1 class="start">День народження нашого друга Гліба</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/gallery-11.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/gallery-7.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/gallery-8.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/gallery-11.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/gallery-7.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/gallery-8.jpg" alt="our photo"></div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <p>День народження нашого друга Гліба - по справжньому щасливий день, коли було неймовірно весело на самому дні народженні і в моменті, коли ми iшли з дня народження. Добираючись до зупинки, ми співали пісні, фотографувалися та веселились, як тільки могли🤪</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <h1 class="start">День народження мами Маши❤️‍🔥</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4"><img src="./images/me and Masha on the balcony.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/water-swimmer.jpg" alt="our photo"></div>
-                <div class="col-4"><img src="./images/kisses.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/me and Masha on the balcony.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/water-swimmer.jpg" alt="our photo"></div>
+                <div class="col-12 col-md-4"><img src="./images/kisses.jpg" alt="our photo"></div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 margin-0">
                     <div class="text">
                         <p>День народження мами Маши❤️‍🔥 було дуже веселим, ми з Машею❤️‍🔥 чудово проводили час, співаючи пісні, танцюючи. Особливо весело нам було в басейні, де ми провели час до самого вечора, роздивляючись смішні картини під водою (фото приклад посередині) </p>
                     </div>
