--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Сонечко❤️</h2>
-            <h2>З днем народження!🎉</h2>
-            <p>Нехай цей день буде наповнений радістю, посмішками та найтеплішими побажаннями. Бажаю
-                тобі безмежного щастя, натхнення та здійснення всіх найзаповітніших мрій. Нехай кожен день приносить
-                нові можливості та приємні сюрпризи, а поруч завжди будуть люблячі та підтримуючі люди.</p>
+            <p>Хочу сказати тобі декілька слів, хоч і не знаю, коли ти це побачишь. Історія нашого кохання пишеться вже без нас, але я хочу, щоб історія наших дружніх відносин нікуди не пішла від нас. І як би не було, ми не забували один про одного, бо ти не байдужа людина в моєму житті😊
+            </p>
 
-            <p>Ти – дивовижна, яскрава та талановита особистість. Нехай твоє світло продовжує освітлювати життя всіх
-                навколо. Будь здорова, успішна та завжди щаслива!🤗💫🎉</p>
+            <p>Ти – дивовижна, і я хочу тобі подякувати за увесь час, що ти мені приділяла, за щасливі ємоції, які ти мені подарувала!🤗
+            </p>
 
             <p>З любов’ю,<br>
-                Антон❤️</p>
+                Антон💔</p>
         </div>
     </div>
 
@@ -210,6 +208,52 @@
 
     </footer>
 
+
+    <!--<script>
+        // Сообщение при заходе на сайт
+        document.addEventListener('DOMContentLoaded', function() {
+            // Показать модальное окно
+            var modal = document.getElementById("welcomeModal");
+            var modalContent = document.querySelector(".modal-content");
+            var span = document.getElementsByClassName("close")[0];
+
+            // Устанавливаем класс для плавного появления модального окна
+            setTimeout(function() {
+                modal.classList.add("show");
+            }, 100);
+
+            // Закрытие модального окна при клике на "X"
+            span.onclick = function() {
+                modalContent.classList.add("fade-out");
+                setTimeout(function() {
+                    modal.classList.remove("show");
+                    modalContent.classList.remove("fade-out");
+                    modal.style.display = "none";
+                }, 500); // Длительность анимации должна совпадать с CSS transition
+            }
+
+            // Закрытие модального окна при клике вне его
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modalContent.classList.add("fade-out");
+                    setTimeout(function() {
+                        modal.classList.remove("show");
+                        modalContent.classList.remove("fade-out");
+                        modal.style.display = "none";
+                    }, 500); // Длительность анимации должна совпадать с CSS transition
+                }
+            }
+        });
+
+        // Работа select
+        const navSelect = document.getElementById('navSelect');
+        navSelect.addEventListener('change', function() {
+            const selectedValue = navSelect.value;
+            if (selectedValue) {
+                window.location.href = selectedValue;
+            }
+        });
+    </script> -->
 
     <script>
         // Сообщение при заходе на сайт
